<resources>
    <string name="app_name">Inspection Reports</string>
    <string name="txt_title_Welcome">Welcome!</string>
    <string name="txt_input_MainLogin" />
    <string name="txt_input_MainPassword" />
    <string name="but_MainLogin">Login</string>
    <string name="txt_title_Menu">Menu</string>
    <string name="but_PenetrantTest">Penetrant Test</string>
    <string name="but_PenetrantMaintenance">Penetrant Test Maintenance</string>
    <string name="but_ClientRegister">Client Register</string>
    <string name="but_ClientMaintenance">Client Maintenance</string>
    <string name="but_InspectorRegister">Inspector Register</string>
    <string name="but_InspectorMaintenance">Inspector Maintenance</string>
    <string name="but_Reports">Reports</string>
    <string name="txt_title_MenuAdmin">Menu Admin</string>
    <string name="but_ReportUT">UT Report</string>
    <string name="but_ReportPT">PT Report</string>
    <string name="but_ReportMT">MT Report</string>
    <string name="but_ReportET">ET Report</string>
    <string name="txt_title_MenuReports">Reports Menu</string>
    <string name="txt_title_MenuUser">Menu User</string>
    <string name="txt_title_ReportPT">Penetrant Report</string>
    <string name="txt_ClientName">Client Name:</string>
    <string name="txt_InspectorName">Requested By:</string>
    <string name="txt_ReportNumber">Report Number:</string>
    <string name="txt_TestSpecification">Specification:</string>
    <string name="txt_PurchaseOrderNo">Order no:</string>
    <string name="txt_ClientLocation">Job Location</string>
    <string name="txt_MaterialGrade">Material Grade:</string>
    <string name="txt_TestMethod">Test Method:</string>
    <string name="txt_TestProcedure">Test Procedure:</string>
    <string name="txt_PenetrantType">Penetrant Type:</string>
    <string name="txt_DeveloperType">Developer Type:</string>
    <string name="txt_RemovalMethod">Removal Method:</string>
    <string name="txt_DwellTimePenetrant">Dwell Time:</string>
    <string name="txt_DwellTimeDeveloper">Dwell Time:</string>
    <string name="txt_TestEquipment">Test Equipment</string>
    <string name="txt_Consumables">Consumables</string>
    <string name="txt_Blacklight">Blacklight:</string>
    <string name="txt_DryerOven">Dryer Oven:</string>
    <string name="txt_DryerOven_SN">S/N:</string>
    <string name="txt_Blacklight_SN">S/N:</string>
    <string name="txt_PreCleaner">Pre Cleaner:</string>
    <string name="txt_PreCleaner_Batch">Batch:</string>
    <string name="txt_Consumables_Remover">Remover:</string>
    <string name="txt_Consumables_Remover_Batch">Batch:</string>
    <string name="txt_Consumables_Developer">Developer:</string>
    <string name="txt_Consumables_Developer_Batch">Batch:</string>
    <string name="txt_Consumables_Penetrant">Penetrant:</string>
    <string name="txt_Consumables_Penetrant_Batch">Batch:</string>
    <string name="txt_QCStatus">QC Status:</string>
    <string name="rad_QCStatus_1">Yes</string>
    <string name="rad_QCStatus_2">No</string>
    <string name="rad_QCStatus_3">NA</string>
    <string name="txt_SurfaceCondition">Surface Condition:</string>
    <string name="txt_Preparation"><![CDATA[& Preparation:]]></string>
    <string name="txt_TestArea">Test Area:</string>
    <string name="txt_TestRestrictions">Test Restrictions</string>
    <string name="txt_input_InspectorName" />
    <string name="txt_input_ReportNumber" />
    <string name="txt_input_PurchaseOrderNo" />
    <string name="txt_input_ClientLocation" />
    <string name="txt_input_TestSpecification" />
    <string name="txt_input_MaterialGrade" />
    <string name="txt_input_TestMethod" />
    <string name="txt_input_TestProcedure" />
    <string name="txt_input_DwellTimePenetrant" />
    <string name="txt_input_DwellTimeDeveloper" />
    <string name="txt_input_Blacklight" />
    <string name="txt_input_Blacklight_SN" />
    <string name="txt_input_DryerOven" />
    <string name="txt_input_DryerOven_SN" />
    <string name="txt_input_Consumables_PreCleaner" />
    <string name="txt_input_Consumables_PreCleaner_Batch" />
    <string name="txt_input_Consumables_Penetrant" />
    <string name="txt_input_Consumables_Penetrant_Batch" />
    <string name="txt_input_Consumables_Remover" />
    <string name="txt_input_Consumables_Remover_Batch" />
    <string name="txt_input_Consumables_Developer" />
    <string name="txt_input_Consumables_Developer_Batch" />

    <string-array name="spinner_ClientTemp_str">
        <item> "André Caride Dutra"</item>
        <item> "Bruno Caride Dutra"</item>
    </string-array>

    <string-array name="spinner_PenetrantType_str">
        <item> "Type 1 (Fluorescent)"</item>
        <item> "Type 2 (Colour contrast)"</item>
    </string-array>

    <string-array name="spinner_DeveloperType_str">
        <item> "Form A - Dry powder"</item>
        <item> "Type D - Solvent based"</item>
    </string-array>

    <string-array name="spinner_SurfaceCondition_str">
        <item> "As welded"</item>
        <item> "As cast"</item>
        <item> "As rolled"</item>
        <item> "As forged"</item>
        <item> "Repaired"</item>
        <item> "Wire brushed"</item>
        <item> "Machined"</item>
        <item> "Ground"</item>
    </string-array>

    <string-array name="spinner_Preparation_str">
        <item> "Water"</item>
        <item> "Solvent flooded"</item>
        <item> "Sprayed"</item>
        <item> "Dipped"</item>
        <item> "Washed and Dired"</item>
        <item> "Wiped"</item>
    </string-array>

    <string-array name="spinner_TestArea_str">
        <item> "100% Weld and associated HAZ"</item>
        <item> "100% accessible surface of item"</item>
        <item> "Strakes"</item>
        <item> "Spot"</item>
        <item> "Other"</item>
    </string-array>

    <string-array name="spinner_Discontinuities_str">
        <item> "Unacceptable surface were NOT detected in the teste area"</item>
        <item> "Unacceptable surface WERE detected in the teste area"</item>
    </string-array>

    <string-array name="spinner_PostCleaning_str">
        <item> "Water"</item>
        <item> "Solvent washed and dried"</item>
        <item> "Wiped"</item>
    </string-array>

    <string-array name="spinner_TestResults_str">
        <item> "The test items (area) complied with the specification requirements"</item>
        <item> "The test items (area) did not comply with the specification requirements"</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_Header">Inspection Report - Caride</string>
    <string name="txt_input_TestRestrictions" />
    <string name="rad_Removal_1">Method A - Water Wash</string>
    <string name="rad_Removal_2">Method C - Solvent</string>
    <string name="txt_Discontinuities">Discontinuities:</string>
    <string name="txt_PostCleaning">Post Cleaning</string>
    <string name="txt_TestResults">Test Results:</string>
    <string name="TestDetails">Test Details:</string>
    <string name="rad_PostCleaning_1">Yes</string>
    <string name="rad_PostCleaning_2">No</string>
    <string name="txt_TestDetails">Test Details</string>
    <string name="txt_Personnel" >Personnel:</string>
    <string name="txt_input_txt_Personnel" />
    <string name="txt_input_TestDetails" />
    <string name="txt_JobDetail">Job Detail</string>
    <string name="txt_TravelStart">Start:</string>
    <string name="txt_TravelFinished">Finished:</string>
    <string name="txt_input_TravelFinished" />
    <string name="txt_input_TravelStart" />
    <string name="txt_JobStart">Start:</string>
    <string name="txt_input_JobStart" />
    <string name="txt_TravelDetail">Travel Detail</string>
    <string name="JobFinished">Finished:</string>
    <string name="txt_input_JobFinished" />
    <string name="Extras">Extras</string>
    <string name="txt_Extras_Consumables">Consumables:</string>
    <string name="txt_input_Extras_Consumables" />
    <string name="txt_Extras_Delay_Repair">Delays/Repair:</string>
    <string name="txt_input_Extras_Delay_Repair" />
</resources>
