<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuReportsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fragment
            android:id="@+id/fragment"
            android:name="ab.caride.ProgramHeaderFragment"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_title_MenuReports"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/txt_title_MenuReports"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_MenuReports">

        <Button
            android:id="@+id/but_PTReport"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:onClick="OnClickbuttonPTReport"
            android:text="@string/but_ReportPT" />

        <Button
            android:id="@+id/but_UTReport"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:text="@string/but_ReportUT" />

        <Button
            android:id="@+id/but_ETReport"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:text="@string/but_ReportET" />

        <Button
            android:id="@+id/but_MTReport"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:text="@string/but_ReportMT" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>