<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuAdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fragment
            android:id="@+id/fragment"
            android:name="ab.caride.ProgramHeaderFragment"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_title_MenuAdmin"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/txt_title_MenuAdmin"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_MenuAdmin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_RegisterClient"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:text="@string/but_ClientRegister"
                android:textSize="19sp" />

            <Button
                android:id="@+id/but_ClientMaintenance"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:text="@string/but_ClientMaintenance"
                android:textSize="19sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_InspectorRegister"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:text="@string/but_InspectorRegister"
                android:textSize="19sp" />

            <Button
                android:id="@+id/but_InspectorMaintenance"
                android:layout_width="180dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/but_InspectorMaintenance"
                android:textSize="19sp" />
        </LinearLayout>

        <Button
            android:id="@+id/but_Reports"
            android:layout_width="360dp"
            android:layout_height="70dp"
            android:onClick="OnClickbuttonMenuReports"
            android:text="@string/but_Reports"
            android:textSize="19sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>