<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fragment
            android:id="@+id/fragment"
            android:name="ab.caride.ProgramHeaderFragment"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_title_Welcome"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/txt_title_Welcome"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_Welcome">

        <EditText
            android:id="@+id/txt_input_MainLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="User"
            android:inputType="textPersonName"
            android:text="@string/txt_input_MainLogin"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="31dp" />

        <EditText
            android:id="@+id/txt_input_MainPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:text="@string/txt_input_MainPassword"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/but_Login"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        android:layout_weight="1"
        android:onClick="OnClickbuttonLogin"
        android:text="@string/but_MainLogin"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>